# facility-location-api

./: .gitignore  README.md  config.py  main.py  pyproject.toml  settings.toml
.github/workflows/: python-package.yml
.scripts/: checkup_scripts.sh
data/json/: clients.json  facilities.json  request.json  response.json
src/api/schemas/: locate.py
src/api/v1/: __init__.py  locate_router.py
src/models/: __init__.py  client.py  cost_problem.py  facility.py  location.py  location_problem.py  location_solution.py
src/services/: __init__.py  client_clustering.py  client_demand_scale.py
src/services/compute_cost/: cost_matrix.py  osrm_cost.py  spherical_cost.py
src/services/facility_location/: integer_formulation.py  solve_location_problem.py  utils.py
src/utils/: __init__.py  multipolygon_util.py
tests/: conftest.py
tests/unit/models/: test_client.py  test_facility.py
tests/unit/services/: test_client_demand_scale.py  test_clustering.py
tests/unit/services/compute_cost/: test_cost_matrix.py  test_osrm_cost.py  test_spherical_cost.py
tests/unit/services/facility_location/: test_solve_location_problem.py  test_utils.py
