[tool.poetry]
name = "Facility Location API"
version = "0.1.0"
description = ""
authors = ["Luan <llvdmoraes@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
highspy = "^1.5.3"
pyomo = "^6.7.1"
fastapi = "^0.110.1"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
orjson = "^3.10.0"
dynaconf = "^3.2.5"
shapely = "^2.0.3"
scikit-learn = "^1.4.2"
requests = "^2.31.0"
cost-matrix = "^0.1.1"


[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
isort = "^5.13.2"
pytest = "^8.1.1"
pytest-cov = "^5.0.0"
mypy = "^1.9.0"
autopep8 = "^2.1.0"
flake8 = "^7.0.0"
ipython = "^8.23.0"
types-requests = "^2.31.0.20240406"
mock = "^5.1.0"
types-mock = "^5.1.0.20240311"
httpx = "^0.27.0"

[tool.autopep8]
max_line_length = 79

[tool.black]
line-length = 79

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
